<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CSRT_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/ET_Prenom"
        android:layout_width="249dp"
        android:layout_height="51dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="Prenom"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txt1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtView_Sexe"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <RadioGroup
        android:id="@+id/radioGroup4"
        android:layout_width="375dp"
        android:layout_height="112dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1">

        <RadioButton
            android:id="@+id/RB_masculin"
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:text="@string/bouton_masculin" />

        <RadioButton
            android:id="@+id/RB_féminin"
            android:layout_width="363dp"
            android:layout_height="58dp"
            android:text="@string/bouton_feminin" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_viewLangue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <CheckBox
        android:id="@+id/check_FR"
        android:layout_width="118dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:text="@string/CB_Francais"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/check_AN"
        android:layout_width="136dp"
        android:layout_height="51dp"
        android:layout_marginTop="61dp"
        android:text="@string/CB_Anglais"
        app:layout_constraintStart_toEndOf="@+id/check_FR"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <CheckBox
        android:id="@+id/check_ES"
        android:layout_width="131dp"
        android:layout_height="51dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="60dp"
        android:text="@string/CB_Espagnol"
        app:layout_constraintStart_toEndOf="@+id/check_AN"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup4" />

    <Button
        android:id="@+id/BT_valider"
        android:layout_width="356dp"
        android:layout_height="69dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="256dp"
        android:text="@string/bt_Valider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_AN" />


</androidx.constraintlayout.widget.ConstraintLayout>